# ININ_Diablo_rosbag

./: CMakeLists.txt  README.md
src/: bag_extractor.cpp  image_saver.cpp  my_rosbag.cpp
tum_dataset_generator/: README.md  README_en.md  fix_gravity_pose.py  generate_real_groundtruth.py  generate_slam_real_groundtruth.py  hand_eye_calibration_result.npz  lidar_pose_to_camera_pose.py  quat_to_rt.py  visualize_slam_result.py
tum_dataset_generator/src/rosbag_image_save/: CMakeLists.txt
tum_dataset_generator/src/rosbag_image_save/src/: my_rosbag.cpp  my_rosbag_SLAM.cpp
